# Traffic-Violation-System

./: README.md
trafficproject/: CMakeLists.txt  addviolationdialog.cpp  addviolationdialog.h  addviolationdialog.ui  createreportdialog.cpp  createreportdialog.h  createreportdialog.ui  dashboard.cpp  dashboard.h  dashboard.ui  login.cpp  login.h  login.ui  main.cpp  paymentdialog.cpp  paymentdialog.h  paymentdialog.ui  policedashboard.cpp  policedashboard.h  policedashboard.ui  policereportpage.cpp  policereportpage.h  policereportpage.ui  resetpassword.cpp  resetpassword.h  resetpassword.ui  updatereportdialog.cpp  updatereportdialog.h  updatereportdialog.ui  updateviolationdialog.cpp  updateviolationdialog.h  updateviolationdialog.ui  userdashboard.cpp  userdashboard.h  userdashboard.ui  userreportpage.cpp  userreportpage.h  userreportpage.ui
trafficproject/SQL database/: TVMS.sql
